<resources>
    <string name="app_name">News App</string>
    <string name="home">Home</string>
    <string name="markers">Markers</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entertainment">Entertainment</string>
    <string name="network_error">Network Error</string>
    <string name="back_layout">back layout</string>
    <string name="search_news">Search news</string>
    <string name="news_not_found">News not found</string>
</resources>