<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="search"
            type="com.example.newsapp.ui.viewModels.SearchNewsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SearchNews">

        <androidx.cardview.widget.CardView
            android:id="@+id/back_layout"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gainsboro"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_layout" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/input_search_news"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:hint="@string/search_news"
            android:padding="10dp"
            android:inputType="text"
            android:text="@={search.q}"
            android:background="@drawable/input_search_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_layout"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/search_new"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_search_nav"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="@{()->search.search()}"
            app:layout_constraintTop_toTopOf="@id/input_search_news"
            app:layout_constraintBottom_toBottomOf="@id/input_search_news"
            app:layout_constraintEnd_toEndOf="@id/input_search_news"
            android:focusable="true"
            android:contentDescription="@string/search_news" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_news"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_search_news"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/search_description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/img_search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_news"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_not_faund_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_not_found"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_not_found"
                android:textSize="15sp"/>

        </LinearLayout>

        <include layout="@layout/network_error_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>